--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
 
 <body>
     <header>
-
+        <div class="mx-auto my-6 navbar bg-base-100">
+            <div class="navbar-start">
+                <img src="Logo.png" alt="">
+            </div>
+            <div class="navbar-center hidden lg:flex">
+                <button class="bg-[#25252533] px-5 py-3 rounded text-xl font-medium">Sort by view</button>
+            </div>
+            <div class="navbar-end">
+                <button class="bg-[#FF1F3D] text-white text-lg font-medium px-5 py-3 rounded">Blog</button>
+            </div>
+        </div>
+        <hr class="mx-6 bg-[#17171733] h-[1px]">
     </header>
     <main>
 
