--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <body>
     <header>
-        <div class="mx-auto my-6 navbar bg-base-100">
+        <div class="navbar mx-auto my-6  bg-base-100">
             <div class="navbar-start">
                 <img src="Logo.png" alt="">
             </div>
-            <div class="navbar-center hidden lg:flex">
+            <div class="navbar-center">
                 <button class="bg-[#25252533] px-5 py-3 rounded text-xl font-medium">Sort by view</button>
             </div>
             <div class="navbar-end">
@@ -25,7 +25,20 @@
         <hr class="mx-6 bg-[#17171733] h-[1px]">
     </header>
     <main>
+        <section class="text-center my-6">
+            <button id="1000" class="bg-[#25252533] text-lg font-semibold px-5 py-1 rounded" onclick="loadVideo(1000);changeColor(1000)">All</button>
+            <button class="ml-3 bg-[#25252533] text-base font-medium px-5 py-2 rounded" onclick="loadVideo(1001)">Music</button>
+            <button class="ml-3 bg-[#25252533] text-base font-medium px-5 py-2 rounded" onclick="loadVideo(1003)">Comedy</button>
+            <button class="ml-3 bg-[#25252533] text-base font-medium px-5 py-2 rounded" onclick="loadVideo(1005)">Drawing</button>
+        </section>
+        <section>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4" id="video-container">
 
+            </div>
+        </section>
+        <section id="oops-section">
+
+        </section>
     </main>
     <footer>
 
