--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <img src="Logo.png" alt="">
             </div>
             <div class="navbar-center">
-                <button class="bg-[#25252533] px-5 py-3 rounded text-xl font-medium">Sort by view</button>
+                <button onclick="sortViews2()" class="bg-[#25252533] px-5 py-3 rounded text-xl font-medium">Sort by view</button>
             </div>
             <div class="navbar-end">
                 <button class="bg-[#FF1F3D] text-white text-lg font-medium px-5 py-3 rounded">Blog</button>
@@ -32,7 +32,7 @@
             <button class="ml-3 bg-[#25252533] text-base font-medium px-5 py-2 rounded" onclick="loadVideo(1005)">Drawing</button>
         </section>
         <section>
-            <div class="grid  grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4" id="video-container">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4" id="video-container">
 
             </div>
         </section>
