Added the files for the page

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     </header>
     <main class="mx-6">
         <section class="text-center my-6">
-            <button id="1000" class="bg-[#25252533] text-lg font-semibold px-5 py-1 rounded" onclick="loadVideo(1000);changeColor(1000)">All</button>
-            <button class="md:ml-3 lg:ml-3 bg-[#25252533] text-base font-medium px-5 py-2 rounded" onclick="loadVideo(1001)">Music</button>
-            <button class="md:ml-3 lg:ml-3 bg-[#25252533] text-base font-medium px-5 py-2 rounded" onclick="loadVideo(1003)">Comedy</button>
-            <button class="md:ml-3 lg:ml-3 bg-[#25252533] text-base font-medium px-5 py-2 rounded" onclick="loadVideo(1005)">Drawing</button>
+            <button id="1000" class="bg-[#25252533] text-lg font-semibold px-5 py-1 rounded" onclick="loadVideo(1000)">All</button>
+            <button id="1001" class="md:ml-3 lg:ml-3 bg-[#25252533] text-base font-medium px-5 py-2 rounded" onclick="loadVideo(1001)">Music</button>
+            <button id="1003" class="md:ml-3 lg:ml-3 bg-[#25252533] text-base font-medium px-5 py-2 rounded" onclick="loadVideo(1003)">Comedy</button>
+            <button id="1005" class="md:ml-3 lg:ml-3 bg-[#25252533] text-base font-medium px-5 py-2 rounded" onclick="loadVideo(1005)">Drawing</button>
         </section>
         <section>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4" id="video-container">
